# first-app

./: package.json  pnpm-lock.yaml
app/: greet.tsx  layout.tsx  page.tsx
app/containers/: page.tsx
app/hardware/: page.tsx
app/operations/: page.tsx
app/settings/: page.tsx
components/layout/: main-layout.tsx  page-container.tsx
components/providers/: store-provider.tsx  tauri-event-handler.tsx
components/ui/: dialog.tsx  input.tsx  select.tsx  table.tsx
lib/store/: vmware.ts
lib/utils/: debounce.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
